<resources>
    <string name="app_name">Minha Grande Familia!</string>
    <string name="main_add_relatives">Add your relatives</string>
    <string name="main_tree_gene">Family tree</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_export">Export</string>
    <string name="nrelative_name">Name</string>
    <string name="nrelatives_name_ex">Ex: Paul Marcus</string>
    <string name="nrelatives_parentage">Parentage</string>
    <string name="nrelatives_birthday">Birthday</string>
    <string name="nrelatives_birthday_ex">Select your relative\'s birthday</string>
    <string name="nrelatives_xinfo">Extra informations</string>
    <string name="nrelatives_xinfo_ex">Phone, email, etc</string>
    <string name="nrelatives_save">Save relative</string>
    <string name="nrelatives_photo_desc">Relative Photo</string>
    <string name="nrelatives_phone">Phone</string>
    <string name="nrelatives_number_phone" translatable="false">(33) 3118 5163</string>
    <string name="nrelatives_email" translatable="false">Email</string>
    <string name="nrelatives_email_ex" translatable="false">Ex: foo@bar.com</string>
    <string name="nrelatives_lives_u">Lives with you?</string>
    <string name="nrelatives_yes">Yes</string>
    <string name="nrelatives_no">No</string>
    <string name="nrelatives_married">Is married?</string>
    <string name="nrelatives_no_choose">Select a parentage</string>
    <string name="main_dialog_title">Informations about your relative</string>
    <string name="main_remind_birthday">Do not forget to look in Birthdays\' page</string>
    <string name="main_locate_birthday">Look in right top menu</string>


    <string name="main_relative_name_ex" translatable="false">Mr mxyzptlk</string>
    <string name="main_relative_parentage_ex">Uncle</string>
    <string name="main_relative_birthday_ex" translatable="false">Monday, August 26, 2017</string>
    <string name="main_relative_remove">Remove relative</string>
    <string name="main_relative_edit">Edit Relative</string>


    <string name="load_json_paste" translatable="false">{ }</string>
    <string name="load_paste_hint">Paste your \'.mgf\' file on root directory</string>
    <string name="load_apply">Apply</string>
    <string name="birthday_birthdays">Birthdays</string>
    <string name="export_hint">The file will be generated on root directory</string>
    <string name="export_success">File created successfully</string>
    <string name="export_not_success">File could not be created</string>
    <string name="export_export">Export</string>
    <string name="nuser_name">Type your name</string>
    <string name="nuser_gender_birthday">Now, insert your gender and birthday</string>
    <string name="nuser_email_nd_confirm">At last, type your email and confirm it</string>
    <string name="nuser_name_ex">Ex: Richard Marcus</string>
    <string name="nuser_male">Male</string>
    <string name="nuser_female">Female</string>
    <string name="nuser_birthday">Select your birthday</string>
    <string name="nuser_email_ex" translatable="false">Ex:foo@bar.com</string>
    <string name="nuser_email_confirm">Confirm your email here</string>
    <string name="nuser_wellcome">Wellcome</string>
    <string name="nuser_empty_name">Please, type your name</string>
    <string name="nuser_empty_email">Please, type your email</string>
    <string name="nuser_empty_birthday">Please, insert your birthday</string>
    <string name="nuser_error_email">Emails do not match!</string>
    <string name="global_treatment_male">Mr.</string>
    <string name="global_treatment_female">Mrs.</string>
    <string name="global_kinship_me">Me</string>
    <string name="global_kinship_son">Son</string>
    <string name="global_kinship_daughter">Daugther</string>
    <string name="global_kinship_father">Father</string>
    <string name="global_kinship_mother">Mother</string>
    <string name="global_kinship_sister">Sister</string>
    <string name="global_kinship_brother">Brother</string>
    <string name="global_kinship_sibling">Sibling</string>
    <string name="global_kinship_cousin">Cousin</string>
    <string name="global_kinship_uncle">Uncle</string>
    <string name="global_kinship_aunt">Aunt</string>
    <string name="global_kinship_grandfather">Grand Father</string>
    <string name="global_kinship_grandmother">Grand Mother</string>
    <string name="global_kinship_grandson">Grand Son</string>
    <string name="global_kinship_grandaughter">Grand Daughter</string>
    <string name="global_ok" translatable="false">OK</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_birthday_dialog">Choose your birthday</string>
    <string name="nrelatives_empty_fields">Fill up your informations</string>
    <string name="login_create">Create new Family</string>
    <string name="login_recover">Recover data</string>
    <string name="global_relation_name">Relation Name</string>
    <string name="global_kinship_kind">Kinship kind</string>
    <string name="tree_grandparents">Grandparents</string>
    <string name="tree_parents">Parents</string>
    <string name="tree_uncle_aunt">Uncles and Aunts</string>
    <string name="tree_brother">Brother</string>
    <string name="tree_me">Me</string>
    <string name="tree_sister">Sister</string>
    <string name="tree_son">Son</string>
    <string name="tree_daughter">Daughter</string>
    <string name="tree_grandchildren">Grandchildren</string>

    <string name="tree_me_click">I think you know all about yourself :D</string>
    <string name="main_menu_birthdays">Birthdays</string>
    <string name="about_version">Version:</string>
    <string name="about_version_name" translatable="false">Baby</string>

    <string-array name="nrelative_kinship_spn">
        <item>@string/global_kinship_son</item>
        <item>@string/global_kinship_daughter</item>
        <item>@string/global_kinship_father</item>
        <item>@string/global_kinship_mother</item>
        <item>@string/global_kinship_sister</item>
        <item>@string/global_kinship_brother</item>
        <item>@string/global_kinship_uncle</item>
        <item>@string/global_kinship_aunt</item>
        <item>@string/global_kinship_grandfather</item>
        <item>@string/global_kinship_grandmother</item>
        <item>@string/global_kinship_grandson</item>
        <item>@string/global_kinship_grandaughter</item>
        <item>@string/global_kinship_cousin</item>
        <item>@string/global_kinship_sibling</item>
    </string-array>
</resources>
