<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.mattsousa.minhagrandefamilia.activity.TreeActivity">

    <Button
        android:id="@+id/tree_btn_grandparents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_grandparents"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/tree_btn_grandparents"
        app:layout_constraintRight_toRightOf="@+id/tree_btn_grandparents"
        app:layout_constraintTop_toBottomOf="@+id/tree_btn_grandparents">

        <Button
            android:id="@+id/tree_btn_parents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_parents"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="84dp" />

        <Button
            android:id="@+id/tree_btn_uncle_aunt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_uncle_aunt"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="84dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout5"
        app:layout_constraintRight_toRightOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/tree_btn_brother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_brother"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="158dp" />

        <Button
            android:id="@+id/tree_btn_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_me" />

        <Button
            android:id="@+id/tree_btn_sister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_sister"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="164dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout6"
        app:layout_constraintRight_toRightOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <Button
            android:id="@+id/tree_btn_son"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_son"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="350dp" />

        <Button
            android:id="@+id/tree_btn_daughter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tree_daughter"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="260dp" />
    </LinearLayout>

    <Button
        android:id="@+id/tree_btn_grandchildren"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_grandchildren"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout7"
        app:layout_constraintRight_toRightOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
</android.support.constraint.ConstraintLayout>
